--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -21,7 +21,7 @@ body.light-theme {
 body.dark-theme {
     /* Primary Colors */
     --text-color: #c9c9c9;          /* Light Gray */
-    --heading-color: #f0f0f0;       /* Off-White */
+    --heading-color: red;   /* Off-White */
     --main-bg-color: #282c34;       /* Charcoal Main Background */
     --sidebar-bg-color: rgba(40, 44, 52, 0.9); /* Charcoal (Slight transparency) */
     --border-color: #3e4451;        /* Darker Border */
@@ -61,7 +61,8 @@ div.sphinxsidebar {
 
 /* Sidebar Headings */
 div.sphinxsidebar h1,
-div.sphinxsidebar h3 {
+div.sphinxsidebar h3,
+div.sphinxsidebar .caption {
     color: var(--heading-color);
 }
 
@@ -123,23 +124,4 @@ div.sphinxsidebar ul li a {
 
 #rellinks {
     background-color: orange;
-}
-
-/* Custom CSS for logo styling */
-
-/* Style the logo image itself */
-img.logo {
-    /* Border: 3px solid a soft orange color */
-    border: 3px solid #ffaa00; /* Example soft orange color */
-    border-radius: 5px; /* Optional: for slightly rounded corners */
-
-    /* Transition for the shadow effect */
-    transition: box-shadow 0.3s ease-in-out;
-}
-
-/* Add the soft orange shadow on hover */
-img.logo:hover {
-    /* Box-shadow: H-offset V-offset Blur Spread Color */
-    /* Adjust values and color (#ffaa00 is soft orange) as needed */
-    box-shadow: 0 0 10px 2px rgba(255, 170, 0, 0.7);
 }
