More content; style caption headings in sidebar

--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -66,6 +66,10 @@ div.sphinxsidebar .caption {
     color: var(--heading-color);
 }
 
+div.sphinxsidebar .caption {
+    font-size: 16pt;
+}
+
 /* Sidebar Normal Links */
 div.sphinxsidebar a {
     color: var(--link-color);
